Wisonet_kernel_demo.ipynb

--- a/Wisonet_kernel_demo.ipynb
+++ b/Wisonet_kernel_demo.ipynb
@@ -52,10 +52,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Download SWING3 2006 subset data (NetCDF format) from Box (no output)\n",
+        "# Download SWING3 2006 subset data (NetCDF format) from Box \n",
         "!curl -L \"https://rice.box.com/shared/static/bcoy3ob0dme3umpurqmf0p6o48bznkj1\" -o SWING3_2006_subset.nc > /dev/null 2>&1\n",
         "\n",
-        "# Download TES monthly 5° x 5° gridded isotope data (filtered) for 2006 from Box (no output)\n",
+        "# Download TES monthly 5° x 5° gridded isotope data (filtered) for 2006 from Box \n",
         "!curl -L \"https://rice.box.com/shared/static/uuy9m15qc1p7s4wm1yrzfzxc6knx7hzw\" -o TES_monthly_5deg_strict.nc > /dev/null 2>&1\n",
         "\n",
         "# Install cartopy (no output)\n",
