Wisonet_kernel_demo.ipynb

--- a/Wisonet_kernel_demo.ipynb
+++ b/Wisonet_kernel_demo.ipynb
@@ -169,7 +169,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🌎 Interactive HDO VMR Maps: Satellite vs Model\n",
+        "## Interactive HDO VMR Maps: Satellite vs Model\n",
         "\n",
         "This interactive tool lets you compare spatial maps of HDO volume mixing ratio (VMR) from:\n",
         "\n",
