--- a/Wisonet_kernel_demo.ipynb
+++ b/Wisonet_kernel_demo.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mampisarkar111/wisonet-colab-demo/blob/main/Copy_of_Wisonet_kernel_demo1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mampisarkar111/wisonet-colab-demo/blob/main/Wisonet_kernel_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -253,6 +253,12 @@
         "from matplotlib.patches import Rectangle\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*tight_layout.*\")\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\", message=\".*Duplicate dimension names.*\")\n",
+        "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*tight_layout.*\")\n",
+        "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*get_cmap.*\")\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
         "\n",
         "# --- Load datasets ---\n",
         "ds = xr.open_dataset(\"SWING3_2006_subset.nc\")\n",
