--- a/Wisonet_kernel_demo.ipynb
+++ b/Wisonet_kernel_demo.ipynb
@@ -30,39 +30,73 @@
       "source": [
         "## Interactive TES vs. Model Comparison\n",
         "\n",
+        "This interactive analysis is part of the upcoming **WISO-SAT: A global database of stable hydrogen isotopes in water vapor from eight satellite missions** (*Sarkar et al., to be submitted*).  \n",
+        "WISO-SAT unifies multiple satellite retrievals into a consistent framework for isotope–climate analysis, including TES, AIRS, CrIS, and others.\n",
         "\n",
-        "Directly comparing raw model output to satellite retrievals can lead to misleading conclusions because satellites have limited and variable vertical sensitivity. Applying the AK ensures the model output is filtered in the same way as the satellite “sees” the atmosphere, allowing for an apples-to-apples comparison.\n",
+        "> **Sarkar, M.**, Dee, S., Frazer, M., Bailey, A., Good, S., Mandal, S., Noёl, S., Schneider, M., Bong, H., Bowman, K., Steen-Larsen, H.C., Haagsma, M., Worden, J., *WISO-SAT: A global database of stable hydrogen isotopes in water vapor from eight satellite missions*, in preparation for submission.\n",
         "\n",
-        "In this section, we build an **interactive visualization tool** that lets you compare satellite retrievals of water vapor isotopes from TES with climate model output, both before and after applying the TES averaging kernel (AK).  \n",
+        "The model data used here is from the **WisoMIP Ensemble** (*Bong et al., 2025, submitted*):  \n",
         "\n",
-        "We display **three side-by-side maps** for a selected month and pressure level:\n",
-        "\n",
-        "1. **TES δD retrievals** – Directly from the monthly TES gridded product.  \n",
-        "2. **Interpolated model δD** – The raw model output interpolated onto the TES grid for a consistent spatial comparison.  \n",
-        "3. **AK-corrected model δD** – The model output after being smoothed with the TES averaging kernel and adjusted with the TES a priori profile, making it directly comparable to the TES retrieval.  \n",
+        "> Bong, H., LeGrande, A.N., Dee, S., Zhu, J., Cauquoin, A., Fiorella, R.P., Ding, Q., Dutrievoz, N., Tanoue, M., Frazer, M., Sarkar, M., Agosta, C., Yoshimura, K., Werner, M., Okazaki, A., Risi, C., Steen-Larsen, H.C., Casado, M., Wahl, S., Nusbaumer, J., Worden, J., Good, S., Bailey, A., Schneider, M., Noël, S., Mandal, S., Bowman, K., Li, Y., and Schmidt, G.A. (2025) *Water Isotope Model Intercomparison Project (WisoMIP): Present-day Climate*, *Journal of Advances in Modeling Earth Systems*, manuscript submitted July 2025.\n",
         "\n",
         "---\n",
         "\n",
-        "**Key steps in the workflow:**\n",
+        "### Why AK correction is essential\n",
         "\n",
-        "- **Select month and pressure level**  \n",
-        "  Use the widgets at the top to choose the target month and pressure level (in hPa) for the comparison.  \n",
-        "  This drives both the data selection and the visualization.\n",
+        "Directly comparing raw model output to satellite retrievals can be misleading because satellites have **limited and variable vertical sensitivity**. The **averaging kernel (AK)** describes how much each vertical level of the atmosphere contributes to the retrieved signal. Applying the AK ensures that model output is filtered in the same way that the satellite “sees” the atmosphere, enabling a fair comparison.\n",
         "\n",
-        "- **Longitude conversion**  \n",
-        "  Model longitudes are converted from 0–360° to –180–180° so they align naturally with the TES grid and standard map projections.\n",
+        "---\n",
         "\n",
-        "- **Spatial interpolation**  \n",
-        "  The model δD field is interpolated from its native grid to the 5°×5° TES grid using bilinear interpolation, ensuring one-to-one pixel comparison.\n",
+        "### What this tool does\n",
         "\n",
-        "- **Averaging kernel application**  \n",
-        "  The TES averaging kernel (AK) and a priori profile are applied to the interpolated model δD.  \n",
-        "  This step simulates how TES would “see” the model atmosphere, accounting for vertical sensitivity and retrieval smoothing.\n",
+        "We build an **interactive visualization** that lets you compare:\n",
+        "1. **TES δD retrievals** – from the monthly TES gridded product (2006 in this example, but other years are supported).  \n",
+        "2. **Interpolated model δD** – raw WisoMIP model output interpolated onto the TES grid.  \n",
+        "3. **AK-corrected model δD** – model output smoothed with the TES averaging kernel and adjusted using the TES a priori profile.\n",
         "\n",
-        "- **Visualization**  \n",
-        "  All three datasets are plotted on the same color scale to highlight differences.  \n",
-        "  The figure includes coastlines, borders, and lat/lon gridlines for geographic context.  \n",
-        "  A colorbar shows δD in per mil (‰).\n"
+        "---\n",
+        "\n",
+        "### How it works\n",
+        "\n",
+        "#### 1. **Month and pressure level selection**\n",
+        "Widgets allow you to choose:\n",
+        "- **Month** (1–12)\n",
+        "- **Pressure level** (hPa)\n",
+        "\n",
+        "#### 2. **Longitude alignment**\n",
+        "Model longitudes are converted from `0–360°` to `–180–180°` for consistency with TES data and map plotting.\n",
+        "\n",
+        "#### 3. **Spatial interpolation**\n",
+        "Model δD values are bilinearly interpolated to the TES 5°×5° grid using `scipy.RegularGridInterpolator`.\n",
+        "\n",
+        "#### 4. **Averaging kernel application**\n",
+        "TES retrievals follow the **Rodgers (2000)** formulation:\n",
+        "\n",
+        "\\[\n",
+        "\\mathbf{x}_{\\text{retrieved}} = \\mathbf{x}_a + \\mathbf{A} \\left( \\mathbf{x}_{\\text{true}} - \\mathbf{x}_a \\right)\n",
+        "\\]\n",
+        "\n",
+        "Where:\n",
+        "- \\(\\mathbf{x}_{\\text{retrieved}}\\): TES-like smoothed profile (our AK-corrected model)  \n",
+        "- \\(\\mathbf{x}_{\\text{true}}\\): True model profile  \n",
+        "- \\(\\mathbf{x}_a\\): TES a priori profile  \n",
+        "- \\(\\mathbf{A}\\): Averaging kernel matrix  \n",
+        "\n",
+        "For isotopes, smoothing is done **in ratio space** (HDO/H₂O), then converted back to δD in per mil (‰).\n",
+        "\n",
+        "#### 5. **Visualization**\n",
+        "- **Three side-by-side maps** (TES, interpolated model, AK-corrected model)\n",
+        "- All share the **same color scale**\n",
+        "- **Geographic context:** coastlines, borders, lat/lon gridlines\n",
+        "- Bottom panel includes a single shared colorbar for δD (‰)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Note:**  \n",
+        "This example uses **monthly 2006** TES and WisoMIP data, but the workflow can be applied to:\n",
+        "- Other years in the TES record\n",
+        "- Any isotope-enabled climate model output\n",
+        "- Any in-situ observations\n"
       ],
       "metadata": {
         "id": "PnpwFhSeueno"
@@ -253,12 +287,6 @@
         "from matplotlib.patches import Rectangle\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*tight_layout.*\")\n",
-        "import warnings\n",
-        "warnings.filterwarnings(\"ignore\", message=\".*Duplicate dimension names.*\")\n",
-        "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*tight_layout.*\")\n",
-        "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*get_cmap.*\")\n",
-        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
         "\n",
         "# --- Load datasets ---\n",
         "ds = xr.open_dataset(\"SWING3_2006_subset.nc\")\n",
@@ -435,12 +463,7 @@
         "By combining the **spatial comparison** with the **vertical sensitivity context**, this notebook helps us:\n",
         "- Identify regions and levels where TES is truly sensitive.\n",
         "- Understand where AK smoothing significantly alters the model output.\n",
-        "- Interpret model–observation differences more robustly.\n",
-        "\n",
-        "**Next steps:**\n",
-        "- Apply this workflow to other years or satellite missions (e.g., AIRS, CrIS).\n",
-        "- Automate comparisons over multiple regions.\n",
-        "- Quantify bias statistics for selected areas and levels.\n"
+        "- Interpret model–observation differences more robustly.\n"
       ],
       "metadata": {
         "id": "lHHZFT8o2t6V"
