--- a/Wisonet_kernel_demo.ipynb
+++ b/Wisonet_kernel_demo.ipynb
@@ -72,15 +72,16 @@
         "#### 4. **Averaging kernel application**\n",
         "TES retrievals follow the **Rodgers (2000)** formulation:\n",
         "\n",
-        "\\[\n",
+        "$$\n",
         "\\mathbf{x}_{\\text{retrieved}} = \\mathbf{x}_a + \\mathbf{A} \\left( \\mathbf{x}_{\\text{true}} - \\mathbf{x}_a \\right)\n",
-        "\\]\n",
+        "$$\n",
         "\n",
         "Where:\n",
-        "- \\(\\mathbf{x}_{\\text{retrieved}}\\): TES-like smoothed profile (our AK-corrected model)  \n",
-        "- \\(\\mathbf{x}_{\\text{true}}\\): True model profile  \n",
-        "- \\(\\mathbf{x}_a\\): TES a priori profile  \n",
-        "- \\(\\mathbf{A}\\): Averaging kernel matrix  \n",
+        "\n",
+        "- $\\mathbf{x}_{\\text{retrieved}}$: TES-like smoothed profile (our AK-corrected model)  \n",
+        "- $\\mathbf{x}_{\\text{true}}$: True model profile  \n",
+        "- $\\mathbf{x}_a$: TES a priori profile  \n",
+        "- $\\mathbf{A}$: Averaging kernel matrix   \n",
         "\n",
         "For isotopes, smoothing is done **in ratio space** (HDO/H₂O), then converted back to δD in per mil (‰).\n",
         "\n",
